Fix Header on small 360px device, set overflow x to hidden, fix logo size for mobile, set responsive size mobile-button menu with clamp()

--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
   color: var(--text-color);
 }
 
+body,
+main,
+footer {
+  overflow-x: hidden;
+}
+
 h1 {
   font-weight: 700;
   font-size: 6.854em;
